Adding comments to server.js, index.html, CSS file

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <i class="fas fa-moon"></i> <!-- This is the night icon -->
 </button>
 
+<!-- Main component for displaying the posts -->
 <main class="container">
     <section class="form-section shadow p-4 mb-4 rounded">
         <h2 class="text-center mb-4">Create a Post</h2>
